...
    }
  };

  return (
    <SafeAreaView style={styles.container}>
      <View style={styles.content}>
        <Text style={[styles.header, { marginBottom: 100 }]}>Who are you?</Text>
        <TouchableOpacity
          style={[
            styles.option,
            selectedOption === 'private' ? styles.selectedPrivateOption : styles.privateOption,
          ]}
          onPress={() => setSelectedOption('private')}
        >
          <Text style={styles.optionText}>I am a private person</Text>
        </TouchableOpacity>
        <TouchableOpacity
          style={[
            styles.option,
            selectedOption === 'business' ? styles.selectedBusinessOption : styles.businessOption,
          ]}
...
