...
    } else {
      navigation.navigate('registerStep4Business');
    }
  };

  const categoryOptions = [
    { value: '', label: 'Category' },
    { value: 'retail', label: 'Retail' },
    { value: 'food', label: 'Food & Beverage' },
    { value: 'tech', label: 'Technology' },
    { value: 'health', label: 'Health & Wellness' },
    { value: 'education', label: 'Education' },
    // Add more categories as needed
...
        <Text style={styles.header}>
          What is your business name?
        </Text>
        <View style={styles.inputWrapper}>
          <InputField
            icon="building"
            placeholder="Business Name"
            keyboardType="default"
            value={businessName}
            onChangeText={setBusinessName}
            isValid={true}
            label="Business Name"
          />
          <Text style={styles.mandatory}>*</Text>
        </View>
        <View style={styles.inputWrapper}>
          <InputField
            icon="id-card"
            placeholder="Business Number"
            keyboardType="default"
            value={businessNumber}
            onChangeText={setBusinessNumber}
            isValid={true}
            label="Business Number"
          />
...
          />
          <Text style={styles.mandatory}>*</Text>
        </View>
        <View style={styles.inputWrapper}>
          <InputField
            icon="info-circle"
            placeholder="Description"
            keyboardType="default"
            value={description}
            onChangeText={setDescription}
            isValid={true}
            label="Description"
          />
...
